# Allergy-Snatcher

./: .gitignore  Dockerfile  ERD.mwb  ERD.mwb.bak  README.md  create.sql  dataimport.py  docker-compose.dev.yml  docker-compose.yml  drop.sql  init_data.sql  procedures.sql  template.yaml  trigger_seq.sql
Database_Systems_Milestone_3/: backup.sql  create.sql  crud.sql  init_data.sql  instructions.txt
allergy_app/: .dockerignore  .gitignore  Dockerfile.prod  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env  Dockerfile  pyproject.toml
backend/src/allergy_snatcher/: __init__.py  __main__.py  endpoints.py  wsgi.py
backend/src/allergy_snatcher/models/: auth.py  database.py  http.py
backend/src/allergy_snatcher/routes/: auth.py  docs.md  endpoints.py
dummy-foods/: ancient-grain.yaml  kelp-noodles.yaml  red-kiss.yaml  sky-berry.yaml  slime-mold.yaml
scripts/: backup_db.sh  reset_db.sh
starter-foods/: TexasChili.yaml  allowed_dietary_restrictions.txt  bread.yaml  cafe-ole-coffee.yaml  central-market-spinach.yaml  failifemilk.yaml  ground-cinnamon.yml  heb-bbq-sauce.yaml  heb-beef-fajitas.yaml  heb-beef-hot-dogs.yaml  heb-broccoli-florets.yaml  heb-butter-tortillas.yaml  heb-california-roll.yaml  heb-canned-tuna.yaml  heb-cod-fillets.yaml  heb-cooked-bacon.yaml  heb-cranberry-pistachio-bread.yaml  heb-creamy-creations-vanilla.yaml  heb-diced-tomatoes.yaml  heb-dill-pickles.yaml  heb-graham-crackers.yaml  heb-mootopia-milk.yaml  heb-orange-juice.yaml  heb-organics-corn.yaml  heb-peanut-butter.yaml  heb-pimento-cheese.yaml  (+10 more)
(+42 files in other folders)
